--- a/button.html
+++ b/button.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="btn"><a href="#">BY YOUNESS</a></div>
     <div class="btn"><a href="#">BY YOUNESS</a></div>
-    <div class="btn"><a href="#">BY YOUNESS</a></div>
+    <div class="btn"><a href="#">BY YOUNESS</a></div><div class="btn"><a href="#">BY YOUNESS</a></div>
     </div>
 </body>
 </html>
